src/objects/Add_On_Widget_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Add_On_Attribute__c</fullName>
        <label>Add On Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_On_Definition__c</fullName>
        <label>Add On Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_On_Fields__c</fullName>
        <label>Add On Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Object_Fields__c</fullName>
        <label>Custom Object Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Object__c</fullName>
        <label>Custom Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Attribute__c</fullName>
        <label>Parent Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Definition__c</fullName>
        <label>Product Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Add On Widget Settings</label>
</CustomObject>